# pyweb

./: .gitignore
django-polls/: MANIFEST.in  README.rst  pyproject.toml  setup.cfg
django-polls/django_polls/: models.py  urls.py  views.py
django-polls/django_polls/migrations/: 0001_initial.py
django-polls/django_polls/templates/polls/: index.html
django-tutorial/: pyproject.toml
django-tutorial/accounts/: forms.py  models.py  urls.py  views.py
django-tutorial/accounts/migrations/: 0001_initial.py
django-tutorial/accounts/templates/accounts/: layout.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_invalid_token.html  signup.html
django-tutorial/home/: urls.py  views.py
django-tutorial/home/templates/home/: index.html
django-tutorial/mysite/: env.py  settings.py  urls.py
django-tutorial/orm/: admin.py  forms.py  tests.py  urls.py  views.py
django-tutorial/orm/migrations/: 0001_initial.py
django-tutorial/orm/models/: __init__.py  blog.py  book.py  choices.py  comma_sep_field.py  custom_manager.py  hand_field.py  meta_options.py  override_methods.py  relationship.py  user.py
django-tutorial/orm/templates/orm/: base.html  create.html  create_user.html  detail.html  index.html  results.html
django-tutorial/polls/: admin.py  tests.py  urls.py  views.py
django-tutorial/polls/migrations/: 0001_initial.py
django-tutorial/polls/models/: __init__.py  question.py
django-tutorial/polls/templates/polls/: detail.html  index.html
django-tutorial/static/styles/: global.css
django-tutorial/templates/layout/: base.html
django-tutorial/templates/partials/: alert.html  button.html
flask-tutorial/: pyproject.toml
flask-tutorial/flaskr/: __init__.py  account.py  auth.py  db.py  env.py  models.py  ocr.py  schema.sql
flask-tutorial/flaskr/templates/auth/: layout.html  login.html  register.html
flask-tutorial/flaskr/templates/components/: buttons.html  forms.html
flask-tutorial/flaskr/templates/layouts/: base.html
tuzhi/: .gitignore  pyproject.toml
tuzhi/scripts/: static_templ.py
tuzhi/scripts/templates/: icon.html  scripts.html  styles.html
tuzhi/tuzhi/: __init__.py  account.py  auth.py  forms.py  models.py  ocr.py
tuzhi/tuzhi/templates/: error.html  index.html  single-input.html  starred.html  wx-oauth.html
tuzhi/tuzhi/templates/account/: account.html  layout.html
tuzhi/tuzhi/templates/assets/: script.html  style.html
tuzhi/tuzhi/templates/auth/: login.html
tuzhi/tuzhi/templates/components/: buttons.html  forms.html
(+55 files in other folders)
