[metadata]
name = django-polls
version = 0.1
description = A Django app to conduct web-based polls.
long_description = file: README.rst
url = https://www.example.com
licence = BSD-3-Clause
classifier =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: 3.10
    Programming Language :: 3.11
    Programming Language :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
pacakge = find:
python_requires = >=3.10
install_requires = Django >= 5.0