[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["neefrankie <neefrankie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
bootstrap-flask = "^2.3.3"
email-validator = "^2.1.0.post1"
flask-sqlalchemy = "^3.1.1"
pymysql = "^1.1.0"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.1"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"
pytest = "^8.0.0"
coverage = "^7.4.1"
pytest-playwright = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
