[tool.poetry]
name = "tuzhi"
version = "0.1.0"
description = ""
authors = ["neefrankie <neefrankie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
bootstrap-flask = "^2.3.3"
flask-wtf = "^1.2.1"
email-validator = "^2.1.0.post1"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
